# empanada-napari

./: LICENSE  MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: deploy.yml  run-tests.yml
.napari/: config.yml
custom_configs/: custom_finetuning.yaml  custom_training.yaml  custom_training_bifpn.yaml  custom_training_pdl.yaml
empanada/: _version.py  array_utils.py  config_loaders.py  consensus.py  losses.py  metrics.py  zarr_utils.py
empanada/data/: __init__.py  _base.py  bc_dataset.py  panoptic_dataset.py  single_class_instance_dataset.py  volume_dataset.py
empanada/data/utils/: __init__.py  sampler.py  target_creation.py  transforms.py
empanada/evaluation/: __init__.py  evaluator.py  instance_metrics.py  panoptic_metrics.py  semantic_metrics.py
empanada/inference/: engines.py  filters.py  matcher.py  patterns.py  postprocess.py  rle.py  tile.py  tracker.py  watershed.py
empanada/models/: __init__.py  blocks.py  heads.py  panoptic_bifpn.py  panoptic_deeplab.py  point_rend.py
empanada/models/decoders/: __init__.py  aspp.py  bifpn.py  panoptic_deeplab.py
empanada/models/encoders/: __init__.py  regnet.py  resnet.py
empanada/models/quantization/: __init__.py  panoptic_bifpn.py  panoptic_deeplab.py  point_rend.py
empanada/models/quantization/decoders/: __init__.py  panoptic_deeplab.py
empanada/models/quantization/encoders/: __init__.py  regnet.py  resnet.py
empanada_napari/: __init__.py  _accuracy_metrics.py  _create_tiles.py  _dock_widget.py  _experimental.py  _export_batch_segs.py  _export_import_models.py  _filter_small_labels.py  _finetune.py  _label_counter_widget.py  _measure_labels.py  _merge_split_widget.py  _open_docs.py  _orthoplane_inference.py  _pick_patches.py  _register_model.py  _slice_inference.py  _stack_inference.py  _test_model.py  _train.py  _version.py  _visualize_patches_from_points.py  _volume_inference.py  dask_utils.py  finetune.py  finetune_config.yaml  inference.py  multigpu.py  napari.yaml  orthoplane.py  plugin.py  sampler.py  single_instance_train_config.yaml  train.py  utils.py
empanada_napari/configs/: DropNet_base_v1.yaml  MitoNet.yaml  MitoNetV2.yaml  MitoNet_v1.yaml  MitoNet_v1_mini.yaml  NucleoNet_base_v1.yaml  NucleoNet_base_v2.yaml
empanada_napari/training/: bifpn_model.yaml  finetune_config.yaml  pdl_model.yaml  train_config.yaml
tests/: conftest.py  pytest.ini  run_container_tests.sh  run_plugin_tests.sh  test_array_utils.py  test_button_widgets.py  test_install.py  test_install_extended.py  test_installation.py  test_model_benchmark.py  test_transforms.py  test_zarr_utils.py
