[metadata]
name = empanada-napari
author = Ryan Conrad
author_email = conradrw@nih.gov
url = https://github.com/volume-em/empanada-napari
license = BSD-3-Clause
description = Napari plugin of algorithms for Panoptic Segmentation of organelles in EM
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/volume-em/empanada-napari/issues
    Documentation = https://github.com/volume-em/empanada-napari#README.md
    Source Code = https://github.com/volume-em/empanada-napari
    User Support = https://github.com/volume-em/empanada-napari/issues

[options]
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
include_package_data = True
# add your package requirements here
install_requires =
    napari>=0.4.15
    numpy<1.23
    napari-plugin-engine>=0.1.4
    scikit-image>=0.19
    empanada-dl>=0.1.5
    imagecodecs

[options.entry_points]
napari.manifest =
    empanada-napari = empanada_napari:napari.yaml

[options.package_data]
empanada_napari = napari.yaml
