[metadata]
name = empanada-napari
version = 1.2
author = Madeline Barry, Abhishek Bhardwaj, Ryan Conrad
author_email = abhishek.bhardwaj@nih.gov
url = https://github.com/volume-em/empanada-napari
license = BSD-3-Clause
description = Napari plugin of algorithms for Panoptic Segmentation of organelles in EM
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/volume-em/empanada-napari/issues
    Documentation = https://github.com/volume-em/empanada-napari#README.md
    Source Code = https://github.com/volume-em/empanada-napari
    User Support = https://github.com/volume-em/empanada-napari/issues

[options]
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
include_package_data = True
# add your package requirements here
install_requires =
    torch>=1.10
    torchvision>=0.2
    zarr>=2.12
    albumentations>=1.2
    pyyaml
    cztile
    mlflow
    opencv-python>=4.11.0.0
    opencv-python-headless>=4.11.0.0
    napari>=0.6.0
    numpy>=1.22
    napari-plugin-engine>=0.1.4
    scikit-image>=0.19
    numba>=0.58.1
    imagecodecs
    openpyxl
    imagehash
    mlflow
    simpleitk
    tqdm


[options.entry_points]
napari.manifest =
    empanada-napari = empanada_napari:napari.yaml

[options.package_data]
empanada_napari = napari.yaml
